nova_tests/strings/neg/plan139_1_neg_str_construct_direct.nv
// EXPECT_COMPILE_ERROR E_PRIV_FIELD_INIT
//
// Plan 139.1 Ф.C — str lang-item GATE (negative, construction forbidden).
//
// `str` is declared `type str value priv { ptr *u8, len int }` in
// std/prelude/core.nv. BOTH fields are `priv`, so forging a str via a record
// literal (`str { ptr: …, len: … }`) from OUTSIDE the str module fires
// E_PRIV_FIELD_INIT (Plan 124 / D220 §4). This prevents user code from
// constructing a str with an arbitrary (ptr, len) pair — which would let it
// alias a non-NUL-terminated / mis-sized buffer and break the D26 §3 NUL
// invariant and the content-eq / hash soundness. str values may only be
// produced through the lang-item's public surface (literals, `+`, the
// from_bytes_* factories), never assembled field-by-field by outside code.
module neg.plan139_1_neg_str_construct_direct

fn forge(p *u8, n int) -> str {
    // priv-field init via record literal outside str-module → E_PRIV_FIELD_INIT.
    str { ptr: p, len: n }
}
